inter/Tests/Valid/nesting.intert
packagetype _plain
packagetype _code

package main _plain
	typename K_number = int32
	constant (K_number) C_alpha = 1
	package sub _plain
		constant (/main/K_number) C_beta = /main/C_alpha
		package subsub _plain
			constant (/main/K_number) C_gamma = /main/C_alpha
			constant (/main/K_number) C_delta = /main/sub/C_beta
		constant (/main/K_number) C_epsilon = /main/sub/subsub/C_gamma
