inter/Tests/Invalid/misvar.intert
packagetype _plain
packagetype _code

package main _plain
	typename K_number = int32
	variable V_apple = 1
	variable V_apple = 2
	variable (int32) V_peach = 12
	typename K_colour = enum
	instance (K_colour) I_green
	instance (K_colour) I_red
	typename K_odour = enum
	instance (K_odour) I_citrus
	instance (K_odour) I_leather
	variable V_overtone = I_citrus
	constant (K_number) V_drivel = khglkl
	constant (K_number) C_drivel = khglkl
